[project]
name = "standard-map"
version = "0.1.0"
description = "Interactive Chirikov Standard Map visualization"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pygame>=2.5",
]

[project.scripts]
standard-map = "standard_map.app:main"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
